# distroless

./: README.md  WORKSPACE
base/: BUILD.bazel
bazel/: externals.bzl  repositories.bzl
cassandra/: BUILD.bazel
entrypoint/: BUILD.bazel  entrypoint.sh
envoyproxy/: Dockerfile  envoy.yaml
java/: BUILD.bazel
postgres/: Dockerfile  build.sh  group  passwd
postgres-slim/: Dockerfile
